edit index.html , style.css

--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
     <title>Survey Form</title>
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
-<h1>Odin project</h1>
+<body><h1>Odin project</h1>
+<p>I am Elhamm</p></body>
